DPK/QCDW32/qcwin.h


typedef  long    HGRAPH;              
typedef  HANDLE   HGOBJ;               
typedef  int		HGOBJ;         
#define  MAXPATHLEN    164
#define  MAX_GRAPHS    16              
#define    ST_LINEAR    0
#define    ST_LOG       1
#define	   MK_BITMAP	  12		
#define	   MK_METAFILE	  13		
#define    MK_LINE        14
#define    MKS_FILLED     0 
#define    MKS_EMPTY      1
#define    MKS_CDOT       2
#define    BAR_FULL    MKS_FILLED       
#define    BAR_HOLLOW  MKS_EMPTY      
#define    BAR_BORDER  MKS_CDOT       
#define    AS_ROUNDCLOSE  1
#define    AS_ROUNDFAR    2
#define    AS_EXACT  3
#define DSPWIN_RECTANG 0
#define DSPWIN_PARZEN  1
#define DSPWIN_HANNING 2
#define DSPWIN_WELCH   3
#define DSPWIN_HAMMING 4
#define DSPWIN_EXACTB  5
#define OR_VERT   0
#define OR_HORZ   1
#define RC_FLAT     0      
#define RC_HIGH     1       
#define RC_DEEP     2
#define RC_LOW      3
#define RC_SHALLOW  4
#define RC_3DBORDER 5
#define MF_WIN     0    
#define MF_PL      1    
#define MF_ENH     2    
#define MAXMOUSEEVENTS 8 
typedef struct
{
        DWORD   key;
        WORD    hmf;
        short   left;
        short   top;
        short   right;
        short   bottom;
        WORD    inch;
        DWORD   reserved;
        WORD    checksum;
} EXT_MFHEADER;
struct tm {
        int tm_sec;     
        int tm_min;     
        int tm_hour;    
        int tm_mday;    
        int tm_mon;     
        int tm_year;    
        int tm_wday;    
        int tm_yday;    
        int tm_isdst;   
        };
typedef struct                   
{
    HGLOBAL      hMem;       
    HMETAFILE    hmf;
    EXT_MFHEADER ExtHeader;
    BOOL         bEnh;           
}
OBJ_META;
typedef struct  
{
   LOGPEN  lp;               
   int   nWidth;           
   long   nColor;           
   HWND    hwnd;             
}  LINEDESC;
typedef OBJ_META far *POBJ_META;
typedef struct
{
    HGRAPH  hPage;             
    HWND    hwnd;              
    void    (CALLBACK *lpfnPage) (LPVOID); 
    HWND    hwParent;          
    int     cxVExt;            
    int     cyVExt;      
    int     cxWExt;            
    int     cyWExt;      
    DWORD   rgbBkColor;        
    int   nMapMode;          
    int   nNumGraphs;        
    int   nGraphCount; 
    int   nSavMapMode;
    BOOL    fInitGraph;        
    BOOL    fLoaded;
    BOOL    fDynamic;          
    HGRAPH  hSelGraph;         
    HGRAPH  hPrevSelGraph;     
    BOOL    fDispSel;          
    BOOL    fPrevDispSel;      
    BOOL    fHigh;             
    BOOL    reserved1;         
    BOOL    fBlow;             
    BOOL    fMeta;             
    float   fSelxOrg;          
    float   fSelyOrg;          
    float   fSelxExt;         
    float   fSelyExt;
    float   rXOrigCoef;        
    float   rYOrigCoef;        
    int     cxVExtOrig;        
    int     cyVExtOrig;      
    int    nLTickSize;           
    int    nSTickSize;           
    char    szFileName[MAXPATHLEN]; 
    char    szName[16];        
    BOOL    cMapIsotr;         
    int    bFixedText;        
    long    wUserWord1;        
    long    wUserWord2;        
    LPVOID  lpTopDesc;         
    HGLOBAL hGrMem [MAX_GRAPHS]; 
    HWND    hwndButton [MAX_GRAPHS];   
    DWORD   dwSignature;
    int     nPosStyle;
} PAGE_DEF;
typedef PAGE_DEF far *PPAGE_DEF;
typedef struct                     
{
   int   nType;                  
   int   nSubType;               
   HGOBJ   (_cdecl FAR *lpfnObj) (LPVOID, HDC); 
   RECT    rcBoundary;             
   HGOBJ   hObj1;                   
   HGOBJ   hObj2;
   LINEDESC ld;
   HGOBJ  (_cdecl FAR *lpfnDynObj) (LPVOID, LPVOID); 
   DWORD   dwLastUpdate;           
   int    wUpdatePer;             
   BOOL    fInverse;
   BOOL    fShow;                  
   BOOL    bCompoundFlag;
   UINT     nUserID;
}
OBJ_HEAD;
typedef OBJ_HEAD FAR *POBJ_HEAD;
typedef struct
{
    LINEDESC ld;
    int    nXScaleType;       
    int    nYScaleType;
    realtype rxInt;             
    realtype ryInt;
    realtype rxMin;             
    realtype rxMax;
    realtype ryMin;
    realtype ryMax;
    realtype rxLMin;            
    realtype rxLMax;
    realtype ryLMin;
    realtype ryLMax;
}  CUR_PAR;
#define MAXSAVEAXES 10
typedef struct
{
   int      nMouseAction;
   void    (CALLBACK *lpfnUserMouseProc) (HWND, LPVOID,  UINT , POINT ); 
} MOUSE_EVENT_DEF;
typedef MOUSE_EVENT_DEF *PMOUSE_EVENT_DEF;
typedef struct
{
   HGRAPH  hGraph;            
   HWND    hwnd;              
   void    (CALLBACK *lpfnGraph) (LPVOID, HDC); 
   POBJ_HEAD pCurrentObjDesc;  
   COLORREF rgbWinBkColor;     
   COLORREF rgbPlotBkColor;    
   BOOL    fFirstTime;
   BOOL    fInit;
   LINEDESC bd;               
   BOOL    fBorder;           
   HDC     hdcPrint;          
   HDC     hdcMeta;           
   int     nDynamic;          
   RECT    rPlotCoord;        
   PPAGE_DEF pPageDesc;       
   int     xWOrg;             
   int     yWOrg;
   int     cxWExt;         
   int     cyWExt;
   int     xVOrg;             
   int     yVOrg;
   int     cxVExt;         
   int     cyVExt;
   float   fxOrg;             
   float   fyOrg;
   float   fxExt;         
   float   fyExt;
   float   fxExtOrig;         
   float   fyExtOrig;
   float   rpX1;              
   float   rpY1;              
   float   rpX2;         
   float   rpY2;
   CUR_PAR cp;               
   int   nMapMode;          
   int     cxLogPixel;        
   int     cyLogPixel;        
   int   nObjCounter;
   HGOBJ   hSelObj;           
   HGOBJ   hAxisX;
   HGOBJ   hAxisY;
   HDC     hdc;               
   int   nNumObjs;          
   LPVOID  pGCO;              
   DWORD   dwSignature;
   BOOL    cIgnorePlot;
   char    cRaised;           
   char    cRepaint;          
   WORD    wUserWord1;        
   WORD    wUserWord2;        
   HGLOBAL hObjDup;          
   HGLOBAL hObjArr;
   HGLOBAL FAR *pObjArr;          
   BOOL		bAddGrObj;
   BOOL    bBitBltMode;
   HBITMAP hGrBitmap;
   HDC hGrBitmapDC;
   MOUSE_EVENT_DEF MouseEventMap[MAXMOUSEEVENTS];
   HGLOBAL   hSaveAxisX[MAXSAVEAXES]; 
   HGLOBAL   hSaveAxisY[MAXSAVEAXES];
    int    nLTickSize;           
    int    nSTickSize;           
} GRAPH_DEF;
#define PARAM_START_NUM 100
#define PARAM_BW_OUTLIERCOEF	PARAM_START_NUM + 300
#define PARAM_BW_MIDPOINTYPE	PARAM_START_NUM + 301
#define PARAM_BW_BOXCOEF		PARAM_START_NUM + 302
#define PARAM_BW_BOXCONST		PARAM_START_NUM + 303
#define PARAM_BW_BOXMIN			PARAM_START_NUM + 304
#define PARAM_BW_BOXMAX			PARAM_START_NUM + 305
#define PARAM_BW_OUTLIERSYMBOL	PARAM_START_NUM + 306
#define PARAM_BW_OUTLIERFLAG	PARAM_START_NUM + 307
#define PARAM_BW_EXTREMESYMBOL	PARAM_START_NUM + 308
#define PARAM_BW_EXTREMEFLAG	PARAM_START_NUM + 309
#define PARAM_BW_MIDPOINTSYMBOL	PARAM_START_NUM + 310
#define PARAM_BW_WHISKERTYPE	PARAM_START_NUM + 312
#define PARAM_BW_WHISKERSIZE	PARAM_START_NUM + 313
#define PARAM_BW_WHISKERCOEF	PARAM_START_NUM + 314
#define PARAM_BW_WHISKERMIN		PARAM_START_NUM + 315
#define PARAM_BW_WHISKERMAX		PARAM_START_NUM + 316
#define PARAM_CONTOUR_VALUE				PARAM_START_NUM + 330
#define PARAM_CONTOUR_COLOR				PARAM_START_NUM + 331
#define PARAM_CONTOUR_LINESTYLE			PARAM_START_NUM + 332
#define PARAM_CONTOUR_LINEWIDTH			PARAM_START_NUM + 333
#define PARAM_CONTOUR_NUMCONTOURS		PARAM_START_NUM + 334
#define PARAM_CONTOUR_BITMAPGRANULARITY	PARAM_START_NUM + 335
#define PARAM_CONTOUR_LINEFLAGS			PARAM_START_NUM + 336
#define PARAM_CONTOUR_LABELFLAGS		PARAM_START_NUM + 337
#define PARAM_CONTOUR_LABELXJUST		PARAM_START_NUM + 338
#define PARAM_CONTOUR_LABELYJUST		PARAM_START_NUM + 339
#define PARAM_CONTOUR_LABELCOLOR		PARAM_START_NUM + 340
#define PARAM_CONTOUR_LABELPREC			PARAM_START_NUM + 341
#define PARAM_CONTOUR_GRAPHTYPE			PARAM_START_NUM + 342
#define PARAM_WATERFALL_XOFFSET		    PARAM_START_NUM + 350
#define PARAM_WATERFALL_YOFFSET		    PARAM_START_NUM + 351
#define PARAM_WATERFALL_FILL		    PARAM_START_NUM + 352
#define PARAM_WATERFALL_BASELINE		PARAM_START_NUM + 353
#define PARAM_WATERFALL_OUTLINE		    PARAM_START_NUM + 354
#define PARAM_WATERFALL_LINESTYLE		PARAM_START_NUM + 355
#define PARAM_WATERFALL_LINEWIDTH		PARAM_START_NUM + 356
#define PARAM_WATERFALL_LINECOLOR		PARAM_START_NUM + 357
#define BM_BMP     1    
#define BM_DIB     2    
#define BM_WINDOW  1
#define BM_CLIENT  2
#define RHS_SOLIDFILL        0x000       
#define RHS_HORIZONTAL       0x100       
#define RHS_VERTICAL         0x200       
#define RHS_FDIAGONAL        0x300      
#define RHS_BDIAGONAL        0x400       
#define RHS_CROSS            0x500       
#define RHS_DIAGCROSS        0x600       
#define ZOOM_SIMPLE   1 
#define ZOOM_XY_PAIRS 2
#define ZOOM_X_NO_Y   3
#define ZOOM_Y_NO_X   4
#define ZOOM_1X_MULTIPLE_Y   5
#define ZOOM_1Y_MULTIPLE_X   6
#define GROUP_ALL_Y     0
#define GROUP_ONE_Y     1
#define GROUP_ALL_Y_STACKED  2
#define ORIENT_PORTRAIT		1		
#define	ORIENT_LANDSCAPE	2		
#define NO_STEP    0				
#define STEP_START 1				
#define STEP_END   2
#define STEP_NO_RISE_LINE 3
#define LG_NONE		0				
#define LG_LINE		1				
#define LG_BAR		2
#define LG_3DBAR	3
#define LG_X		4
#define LG_UPTRIANGLE	5
#define LG_DOWNTRIANGLE	6
#define LG_BOX		7
#define LG_PLUS		8
#define LG_ASTERISK	9
#define LG_DIAMOND	10
#define LG_CIRCLE	11
#define LG_DOT		12
#define LG_BITMAP	13
#define LG_METAFILE	14
#define LGS_FILLED     0 
#define LGS_EMPTY      1
#define LGS_CDOT       2
#define LGS_SOLID	0 
#define LGS_DASH	1
#define LGS_DOT		2
#define LGS_DASHDOT	3 
#define LGS_DASHDOTDOT	4
#define MAXLEGEND	32
#define TYPE_NONE	0		
#define LEG_FLEX	1		
#define GEN_TEXT	2		
#define GEN_TEXTN	3		
	#define  MAXBMNAMELEN  80
#define	BW_NONE    0
#define	BW_PERCNT  1
#define	BW_MINMAX  2
#define	BW_CONST   3  
#define	BW_STDDEV  4
#define	BW_STDERR  5
#define	BW_NONOUT  6
#define BW_COLUMN  7
#define	BW_MEAN    0
#define	BW_MEDIAN  1
#define BW_MIDP 0
#define BW_OH   1
#define BW_OL   2
#define BW_UBV  3
#define BW_LBV  4
#define BW_EH   5
#define BW_EL   6
#define BW_WHHIGH 7
#define BW_WHLOW  8
#define BW_NELEM  9 
#define BW_BOX 10
#define BW_WHISKER 11
#define BW_OUTLIER 12
#define BW_EXTREME 13