DPK/QCDW32/support.h

void _cdecl Metafile (PGRAPH_DEF pGrDesc, HDC hdc);