DPK/QCDW32/qcwin.pas


    MK_BITMAP	  =12;
    MK_METAFILE	  =13;


    MK_LINE    =    14;

{*******************************************************************}
{ Marker and bar styles }

    MKS_FILLED     = 0;
    MKS_EMPTY      = 1;
    MKS_CDOT       = 2;

    BAR_FULL    = MKS_FILLED;
    BAR_HOLLOW  = MKS_EMPTY ;
    BAR_BORDER  = MKS_CDOT;

{**********************************************************************}
{ Autoscaling parameters: }

    AS_ROUNDCLOSE = 1;
    AS_ROUNDFAR   = 2;
    AS_EXACT = 3 ;

{********************************************************************}
{ DSP constants (windows types)                                      }
{********************************************************************}

 DSPWIN_RECTANG = 0;
 DSPWIN_PARZEN  = 1;
 DSPWIN_HANNING = 2;
 DSPWIN_WELCH   = 3;
 DSPWIN_HAMMING = 4;
 DSPWIN_EXACTB  = 5;

{*************************************************************************}
{ orientation constants }

 OR_VERT  = 0;
 OR_HORZ  = 1;

{*************************************************************************}
{ raised rectangle constants }

 RC_FLAT     = 0;      { regular }
 RC_HIGH     = 1;
 RC_DEEP     = 2;
 RC_LOW      = 3;
 RC_SHALLOW  = 4;
 RC_3DBORDER = 5;


{*************************************************************************}
{ Metafile types }

 MF_WIN    = 0;    { Old Windows metafile    }
 MF_PL     = 1;    { Placeable Aldus metafile }
 MF_ENH    = 2;    { New enhanced Windows metafile }

{*************************************************************************}
{ placeable metafile header }

BM_BMP  =   1;
BM_DIB  =   2;


BM_WINDOW = 1;
BM_CLIENT = 2;

   RHS_SOLIDFILL       = $000;
   RHS_HORIZONTAL      = $100;
   RHS_VERTICAL        = $200;
   RHS_FDIAGONAL       = $300;
   RHS_BDIAGONAL       = $400;
   RHS_CROSS           = $500;
   RHS_DIAGCROSS       = $600;

   ZOOM_SIMPLE  = 1;
   ZOOM_XY_PAIRS =2;
   ZOOM_X_NO_Y   =3;
   ZOOM_Y_NO_X   =4;
   ZOOM_1X_MULTIPLE_Y   =5;
   ZOOM_1Y_MULTIPLE_X   =6;

   GROUP_ALL_Y     =0;
   GROUP_ONE_Y     =1;
   GROUP_ALL_Y_STACKED  =2;


   ORIENT_PORTRAIT      = 1;
   ORIENT_LANDSCAPE	=2;


   NO_STEP    =0;
   STEP_START =1;
   STEP_END   =2;
   STEP_NO_RISE_LINE =3;

   LG_NONE	=0;
   LG_LINE	=1;

   LG_BAR	=2;
   LG_3DBAR	=3;
   LG_X		=4;
   LG_UPTRIANGLE =5;
   LG_DOWNTRIANGLE =6;
   LG_BOX	   =7;
   LG_PLUS	   =8;
   LG_ASTERISK	=9;
   LG_DIAMOND	=10;
   LG_CIRCLE	=11;
   LG_DOT	=12;
   LG_BITMAP	=13;
   LG_METAFILE	=14;

   LGS_FILLED    =0;
   LGS_EMPTY     =1;
   LGS_CDOT      =2;

   LGS_SOLID	=0;
   LGS_DASH	=1;
   LGS_DOT	=2;
   LGS_DASHDOT	=3;
   LGS_DASHDOTDOT=4;

   MAXLEGEND	=32;

   TYPE_NONE	=0;
   LEG_FLEX	=1;
   GEN_TEXT	=2;
   GEN_TEXTN	=3;


   BW_NONE    =0;
   BW_PERCNT  =1;
   BW_MINMAX  =2;
   BW_CONST   =3;
   BW_STDDEV  =4;
   BW_STDERR  =5;
   BW_NONOUT  =6;
   BW_COLUMN  =7;


   BW_MEAN    =0;
   BW_MEDIAN  =1;


   BW_MIDP =0;
   BW_OH   =1;
   BW_OL   =2;
   BW_UBV  =3;
   BW_LBV  =4;
   BW_EH   =5;
   BW_EL   =6;
   BW_WHHIGH =7;
   BW_WHLOW  =8;
   BW_NELEM  =9;


   BW_BOX =10;
   BW_WHISKER =11;
   BW_OUTLIER =12;
   BW_EXTREME =13;


   MAXBMNAMELEN = 80;

   MAXSAVEAXES =10;
   MAXMOUSEEVENTS =8;

   // NEW PARAMETER CONSTANTS or REV 3.0
  PARAM_START_NUM =100;
  PARAM_BW_OUTLIERCOEF =	PARAM_START_NUM + 300;
  PARAM_BW_MIDPOINTYPE =	PARAM_START_NUM + 301;
  PARAM_BW_BOXCOEF=		PARAM_START_NUM + 302;
  PARAM_BW_BOXCONST =		PARAM_START_NUM + 303;
  PARAM_BW_BOXMIN =	        PARAM_START_NUM + 304;
  PARAM_BW_BOXMAX =		PARAM_START_NUM + 305;
  PARAM_BW_OUTLIERSYMBOL =	PARAM_START_NUM + 306;
  PARAM_BW_OUTLIERFLAG=	PARAM_START_NUM + 307;
  PARAM_BW_EXTREMESYMBOL=	PARAM_START_NUM + 308;
  PARAM_BW_EXTREMEFLAG=	PARAM_START_NUM + 309;
  PARAM_BW_MIDPOINTSYMBOL=	PARAM_START_NUM + 310;
  PARAM_BW_WHISKERTYPE=	PARAM_START_NUM + 312;
  PARAM_BW_WHISKERSIZE=	PARAM_START_NUM + 313;
  PARAM_BW_WHISKERCOEF=	PARAM_START_NUM + 314;
  PARAM_BW_WHISKERMIN=		PARAM_START_NUM + 315;
  PARAM_BW_WHISKERMAX=		PARAM_START_NUM + 316;

  PARAM_CONTOUR_VALUE=	 PARAM_START_NUM + 330;
  PARAM_CONTOUR_COLOR=	   PARAM_START_NUM + 331;
  PARAM_CONTOUR_LINESTYLE=   PARAM_START_NUM + 332;
  PARAM_CONTOUR_LINEWIDTH=   PARAM_START_NUM + 333;
  PARAM_CONTOUR_NUMCONTOURS=   PARAM_START_NUM + 334;
  PARAM_CONTOUR_BITMAPGRANULARITY= PARAM_START_NUM + 335;
  PARAM_CONTOUR_LINEFLAGS=   	PARAM_START_NUM + 336;
  PARAM_CONTOUR_LABELFLAGS =  	PARAM_START_NUM + 337;
  PARAM_CONTOUR_LABELXJUST=   	PARAM_START_NUM + 338;
  PARAM_CONTOUR_LABELYJUST=   	PARAM_START_NUM + 339;
  PARAM_CONTOUR_LABELCOLOR=   	PARAM_START_NUM + 340;
  PARAM_CONTOUR_LABELPREC=     	PARAM_START_NUM + 341;
  PARAM_CONTOUR_GRAPHTYPE =   	PARAM_START_NUM + 342;

  PARAM_WATERFALL_XOFFSET=      PARAM_START_NUM + 350;
  PARAM_WATERFALL_YOFFSET =     PARAM_START_NUM + 351;
  PARAM_WATERFALL_FILL=	        PARAM_START_NUM + 352;
  PARAM_WATERFALL_BASELINE=   PARAM_START_NUM + 353;
  PARAM_WATERFALL_OUTLINE=	PARAM_START_NUM + 354;
  PARAM_WATERFALL_LINESTYLE=	PARAM_START_NUM + 355;
  PARAM_WATERFALL_LINEWIDTH=	 PARAM_START_NUM + 356;
  PARAM_WATERFALL_LINECOLOR =	 PARAM_START_NUM + 357;



type

EXT_MFHEADER = record
        key: DWORD;
        hmf: WORD;
       left,
       top,
       right,
       bottom: SHORT;
        inch: WORD;
        reserved: DWORD;
        checksum: WORD;
end;

{************************************************************************}
LINEDESC = record
   lp: TLOGPEN;               { Windows pen descriptor  }
   nWidth: INTEGER;           { line width in pixels    }
   nColor: INTEGER;           { pure color code         }
   hwnd: HWND;             { handle of the graph window }

end;
PLINEDESC = ^LINEDESC;   { NEW FOR TURBO PASCAL }


{***********************************************************************}
OBJ_META = record                   { Metafile object }
    hMem: HGLOBAL;       { memory handle for the OBJ_META descriptor }
    hmf: HMETAFILE;
    ExtHeader: EXT_MFHEADER;
    bEnh: BOOL;       { TRUE if new enhanced metafile }
end;

POBJ_META = ^OBJ_META;


{ProcType0 = function: INTEGER; stdcall;
ProcType1 = procedure (fp:Pointer); stdcall;
FuncType2 = function (fp:Pointer; thdc:HDC): THandle; stdcall;
}

{*************************************************************************}
{ Page descriptor  (page can have multiple graphs) }

PAGE_DEF = record

    hPage: HGRAPH;             { handle }
    thwnd: HWnd;              { chart page window handle}

    lpfnPage: TFarProc;   { function initializing graph}
    hwParent: HWnd;          { parent window handle}

    cxVExt,            { Viewport extents }
    cyVExt,
    cxWExt,            { Window extents  }
    cyWExt: INTEGER;
    rgbBkColor: DWORD;        { Chart page window background color}
    nMapMode,          { ISOTROPIC or ANISOTROPIC}
    nNumGraphs,        { Number of graphs on the page}
    nGraphCount,
    nSavMapMode: INTEGER;

    fInitGraph,        { Initialization flag}
    fLoaded,
    fDynamic: BOOL;          { Set to TRUE if something is dynamic}
    hSelGraph,         { handle to selected graph}
    hPrevSelGraph: HGRAPH;     { handle to previously selected graph}
    fDispSel,          { flag indicating selectors are displayed}
    fPrevDispSel,      { previous state of the flag}
    fHigh,             { flag indicating selected graph is highlighted}
    reserved1,
    fBlow,             { flag indicating selected graph is blown up}
    fMeta: BOOL;             { if not 0, output is to a metafile}

    fSelxOrg,          { Save area for selected graph window extents}
    fSelyOrg,          { and origin relative to page}
    fSelxExt,
    fSelyExt: SINGLE;

    rXOrigCoef,        { compression/expansion coefficients}
    rYOrigCoef: SINGLE;        { relative to original size}
    cxVExtOrig,        { Original Viewport extents}
    cyVExtOrig: INTEGER;

    nLTickSize,           { Large Tick Size in pixels}
    nSTickSize: INTEGER;           { Small Tick Size in pixels}

    szFileName: array[0..MAXPATHLEN-1] of CHAR; { Save file or metafile name }
    szName: array[0..15] of CHAR;        { ASCII internal name of the page }
    cMapIsotr: BOOL;         { Isotropic resizable mapping mode flag}

    bFixedText: Integer;        { if != 0, text size does not change when graph is resized }
    wUserWord1,        { user can do anything with this field}
    wUserWord2: Integer;        { user can do anything with this field}
    lpTopDesc: POINTER;         { pointer to TopDesc}

    hGrMem: array[0..MAX_GRAPHS-1] of HGLOBAL; { array of memory handles to graphs}
    hwndButton: array[0..MAX_GRAPHS-1] of HWnd;   { handles to selector buttons}
    dwSignature: DWORD;
    nPosStyle: INTEGER;
end;

 PPAGE_DEF = ^PAGE_DEF;

{************************************************************************}
 OBJ_HEAD = record                     { common header }
   nType,                  { object type         }
   nSubType: INTEGER;               { object subtype }
   lpfnObj: TFARPROC;              { function drawing the object}
   rcBoundary: TRect;             { object limits in device coordinates }
   hObj1,                   { handles of associated objects (axes) }
   hObj2: HGOBJ;
   ld: LINEDESC;
  // HGOBJ  (_cdecl FAR *lpfnDynObj) (LPVOID, LPVOID); // update func.
  // DWORD   dwLastUpdate;           // seconds count for last update
   //int    wUpdatePer;             // update period in seconds
  reserved: array [0..11] of CHAR;
   fInverse,
   fShow: BOOL;                  { if = 0, hide object }
   bCompoundFlag: BOOL;
   nUserID: UINT;

end;

POBJ_HEAD = ^OBJ_HEAD;

  CUR_PAR = record

       {  storage for current graph parameters}
    ld :LINEDESC;

    nXScaleType,       { ST_LINEAR or ST_LOG}
    nYScaleType: Integer;
    rxInt,             { intercepts}
    ryInt,

    rxMin,             { scaling values}
    rxMax,
    ryMin,
    ryMax,

    rxLMin,            { scaling values (logarithmic)}
    rxLMax,
    ryLMin,
    ryLMax: RealType;

  end;


 tm = record
         tm_sec,
         tm_min,
         tm_hour,
         tm_mday,
         tm_mon,
         tm_year,
         tm_wday,
         tm_yday,
         tm_isdst: INTEGER
end;

Ptm = ^tm;


MOUSE_EVENT_DEF = record

   nMouseAction: INTEGER;
  lpfnUserMouseProc: TFarProc;

  //x: INTEGER;
  //(HWND, LPVOID,  UINT , POINT );
end;

PMOUSE_EVENT_DEF = ^MOUSE_EVENT_DEF;

{************************************************************************}
{ Graph descriptor }

GRAPH_DEF = record


   thGraph: HGRAPH;            { handle }
   thwnd: HWnd;              { graph window handle}
   lpfnGraph: TFarProc;
   pCurrentObjDesc: POBJ_HEAD;  { pointer to currently processed object desc.}
   rgbWinBkColor,     { Chart window background color}
   rgbPlotBkColor: TColorRef;    { Plotting area background color}
   fFirstTime,
   fInit: BOOL;
   bd: LINEDESC;               { border line descriptor}
   fBorder : BOOL;         { border flag}
   hdcPrint: HDC;              { if not 0, output is to a printer}
   hdcMeta: HDC;           { if not 0, output is to a metafile}
   nDynamic: INTEGER;          { Set to TRUE if something is dynamic}


   rPlotCoord: TRect;        { logical coordinates of plotting area }
 pPageDesc: PPAGE_DEF;       { Page descriptor pointer}
   xWOrg,             { Window extents and origin in logical coords}
   yWOrg,
   cxWExt,
   cyWExt,
   xVOrg,             { Window extents and origin in device coords }
   yVOrg,
   cxVExt,
   cyVExt: INTEGER;
   fxOrg,             { Window extents and origin relative to page }
   fyOrg,
   fxExt,
   fyExt,
   fxExtOrig,
   fyExtOrig,

   rpX1,              { Plotting area coordinates relative}
   rpY1,              { to graph window}
   rpX2,
   rpY2: SINGLE;

